Added more content and fixed bugs

--- a/Contact.html
+++ b/Contact.html
@@ -29,13 +29,21 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="Program.html">Conference Program</a>
+									<a href="CallForPaper.html">Conference Program</a>
 									<ul>
-										<li><a href="Program.html">Program &amp; Events</a></li>
+										<li><a href="CallForPaper.html">Call for Papers</a></li>
 										<li><a href="Schedule.html">Schedule</a></li>
 										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
 										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="PosterInformation.html">Posters</a>
+									<ul>
+										<li><a href="PosterInformation.html">Information</a></li>
+										<li><a href="PosterBooklet.html">Poster Booklet</a></li>
+										<li><a href="PastWinners.html">Past Winners</a></li>
 									</ul>
 								</li>
 								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
@@ -57,33 +65,34 @@
 
 								<article>
 									<header>
-										<h2>No Sidebar</h2>
-										<p>All content, all the time.</p>
+										<h2>Contact Us</h2>
+										<p>Please use following form to contact us or email conference organizer/chair at   </p>
 									</header>
 
-									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
-
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-									<h3>And Yet Another Subheading</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+									<section class="6u 12u(narrower)">
+										<form>
+											<div class="row 50%">
+												<div class="6u 12u(mobilep)">
+													<input type="text" name="name" id="name" placeholder="Name" />
+												</div>
+												<div class="6u 12u(mobilep)">
+													<input type="email" name="email" id="email" placeholder="Email" />
+												</div>
+											</div>
+											<div class="row 50%">
+												<div class="12u">
+													<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
+												</div>
+											</div>
+											<div class="row 50%">
+												<div class="12u">
+													<ul class="actions">
+														<li><input type="submit" class="button alt" value="Send Message" /></li>
+													</ul>
+												</div>
+											</div>
+										</form>
+									</section>
 								</article>
 
 						</div>
@@ -111,31 +120,7 @@
 									<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
 								</ul>
 							</section>
-							<section class="6u 12u(narrower)">
-								<h3>Get In Touch</h3>
-								<form>
-									<div class="row 50%">
-										<div class="6u 12u(mobilep)">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="6u 12u(mobilep)">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
+
 						</div>
 					</div>
 
@@ -143,7 +128,6 @@
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						</ul>
