--- a/PhotoGallery.html
+++ b/PhotoGallery.html
@@ -29,15 +29,23 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li class="current">
-									<a href="Program.html">Conference Program</a>
+									<a href="CallForPaper.html">Conference Program</a>
 									<ul>
-										<li><a href="Program.html">Program &amp; Events</a></li>
+										<li><a href="CallForPaper.html">Call for Papers</a></li>
 										<li><a href="Schedule.html">Schedule</a></li>
 										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
 										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
 									</ul>
 								</li>
+                <li>
+                  <a href="PosterInformation.html">Posters</a>
+                  <ul>
+                    <li><a href="PosterInformation.html">Information</a></li>
+                    <li><a href="PosterBooklet.html">Poster Booklet</a></li>
+                    <li><a href="PastWinners.html">Past Winners</a></li>
+                  </ul>
+                </li>
 								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
 								<li><a href="Registration.html">Registration</a></li>
 								<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
