--- a/Travel-Stay.html
+++ b/Travel-Stay.html
@@ -29,13 +29,21 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="Program.html">Conference Program</a>
+									<a href="CallForPaper.html">Conference Program</a>
 									<ul>
-										<li><a href="Program.html">Program &amp; Events</a></li>
+										<li><a href="CallForPaper.html">Call for Papers</a></li>
 										<li><a href="Schedule.html">Schedule</a></li>
 										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
 										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="PosterInformation.html">Posters</a>
+									<ul>
+										<li><a href="PosterInformation.html">Information</a></li>
+										<li><a href="PosterBooklet.html">Poster Booklet</a></li>
+										<li><a href="PastWinners.html">Past Winners</a></li>
 									</ul>
 								</li>
 								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
@@ -57,8 +65,8 @@
 										<a href="#" class="image left"><img src="images/airport.png" alt="" /></a>
 										<div class="inner">
 											<h3>Airports</h3>
-											<p><a href="http://www.waco-texas.com/airport/" target="_blank">Waco Airport</a><br/><br/>
-											<a href="http://www.dfwairport.com/" target="_blank">DFW Airport</a></p>
+											<p><b><a href="http://www.waco-texas.com/airport/" target="_blank">Waco Airport</a><br/><br/>
+											<a href="http://www.dfwairport.com/" target="_blank">DFW Airport</a></b></p>
 										</div>
 									</div>
 								</section>
@@ -67,7 +75,7 @@
 										<a href="#" class="image left"><img src="images/maps.png" alt="" /></a>
 										<div class="inner">
 											<h3>Navigation</h3>
-											<p><a href="https://www.google.com/maps/place/Baylor+University/@31.549841,-97.1165033,17z/data=!3m1!4b1!4m5!3m4!1s0x864f826a49c7e691:0x636ad356faf7d7dd!8m2!3d31.549841!4d-97.1143146" target="_blank">1301 S University Parks Dr, Waco, TX 76798</a></p>
+											<p><b><a href="https://www.google.com/maps/place/Baylor+University/@31.549841,-97.1165033,17z/data=!3m1!4b1!4m5!3m4!1s0x864f826a49c7e691:0x636ad356faf7d7dd!8m2!3d31.549841!4d-97.1143146" target="_blank">1301 S University Parks Dr, Waco, TX 76798</a></b></p>
 										</div>
 									</div>
 								</section>
@@ -78,7 +86,7 @@
 										<a href="#" class="image left"><img src="images/parking.jpg" alt="" /></a>
 										<div class="inner">
 											<h3>Parking</h3>
-											<p><a href="files/Parking.pdf" target="_blank">Parking Permit Information</a></p>
+											<p><b><a href="files/Parking.pdf" target="_blank">Parking Permit Information</a></b></p>
 										</div>
 									</div>
 								</section>
@@ -87,7 +95,7 @@
 										<a href="#" class="image left"><img src="images/lodging.jpg" alt="" /></a>
 										<div class="inner">
 											<h3>Lodging</h3>
-											<p><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></p>
+											<p><b><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></b></p>
 										</div>
 									</div>
 								</section>
