--- a/Registration.html
+++ b/Registration.html
@@ -29,13 +29,21 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="Program.html">Conference Program</a>
+									<a href="CallForPaper.html">Conference Program</a>
 									<ul>
-										<li><a href="Program.html">Program &amp; Events</a></li>
+										<li><a href="CallForPaper.html">Call for Papers</a></li>
 										<li><a href="Schedule.html">Schedule</a></li>
 										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
 										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="PosterInformation.html">Posters</a>
+									<ul>
+										<li><a href="PosterInformation.html">Information</a></li>
+										<li><a href="PosterBooklet.html">Poster Booklet</a></li>
+										<li><a href="PastWinners.html">Past Winners</a></li>
 									</ul>
 								</li>
 								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
@@ -55,9 +63,9 @@
 							<article>
 								<header>
 									<!-- <i class="icon major round-register-img"></i> -->
-										<p><a href="http://www.profdong.com/WMCS/" target="_blank">2017 Conference Registration </a></p>
+										<p><b><a href="http://www.profdong.com/WMCS/" target="_blank">2017 Conference Registration </a></b></p>
 								</header>
-								<iframe src="http://www.profdong.com/WMCS/" style="border:2px solid black;" height="1000" width="1500">&nbsp;</iframe>
+								<iframe src="http://www.profdong.com/WMCS/" style="border:2px solid black;" height="1000" width="1100">&nbsp;</iframe>
 							</article>
 						</div>
 					</div>
