--- a/PastWinners.html
+++ b/PastWinners.html
@@ -79,7 +79,7 @@
             <!-- Content -->
 
               <article>
-                <h3><b><a href="files/Student Poster Winners.pdf" target="_blank">Past Winners</b></h3>
+                <p><b><a href="files/Student Poster Winners.pdf" target="_blank">Past Winners</b></p>
               </article>
 
           </div>
