--- a/PosterBooklet.html
+++ b/PosterBooklet.html
@@ -79,7 +79,7 @@
             <!-- Content -->
 
               <article>
-                <h3><b><a href="files/2016 Texas Symposium Poster Booklet.pdf" target="_blank">2017 Texas Symposium Poster Booklet</b></h3>
+                <p><b><a href="files/2016 Texas Symposium Poster Booklet.pdf" target="_blank">2017 Texas Symposium Poster Booklet</b></p>
               </article>
 
           </div>
