Removed registration link

--- a/Registration.html
+++ b/Registration.html
@@ -65,7 +65,7 @@
 									<!-- <i class="icon major round-register-img"></i> -->
 										<!-- <p><b><a href="http://www.profdong.com/WMCS/" target="_blank">2017 Conference Registration </a></b></p> -->
 											<p><b>2017 Conference Registration</b></p>
-												<h2><b>Comming Soon!</h2></p>
+												<h2><b>coming soon!</h2></p>
 								</header>
 								<!-- <iframe src="http://www.profdong.com/WMCS/" style="border:2px solid black;" height="1000" width="1100">&nbsp;</iframe> -->
 							</article>
