--- a/Registration.html
+++ b/Registration.html
@@ -63,11 +63,11 @@
 							<article>
 								<header>
 									<!-- <i class="icon major round-register-img"></i> -->
-										<!-- <p><b><a href="http://www.profdong.com/WMCS/" target="_blank">2017 Conference Registration </a></b></p> -->
+										<!-- <p><b><a href="Registration.html" target="_blank">2017 Conference Registration </a></b></p> -->
 											<p><b>2017 Conference Registration</b></p>
-												<h2><b>coming soon!</h2></p>
+												<h2><b>Coming Soon!</h2></p>
 								</header>
-								<!-- <iframe src="http://www.profdong.com/WMCS/" style="border:2px solid black;" height="1000" width="1100">&nbsp;</iframe> -->
+								<!-- <iframe src="Registration.html" style="border:2px solid black;" height="1000" width="1100">&nbsp;</iframe> -->
 							</article>
 						</div>
 					</div>
@@ -80,7 +80,7 @@
 							<section class="3u 6u(narrower) 12u$(mobilep)">
 								<h3>Quick Links</h3>
 								<ul class="links">
-									<li><a href="http://www.profdong.com/WMCS/" target="_blank">Registration</a></li>
+									<li><a href="Registration.html" target="_blank">Registration</a></li>
 									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
 									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
 									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank">Conference Program</a></li>
