Fixed contact us form and home page

--- a/CallForPaper.html
+++ b/CallForPaper.html
@@ -65,7 +65,7 @@
 
 								<article>
 									<header>
-										<h2>Call for paper</h2>
+										<h2>Call for Papers</h2>
                     <span class="image featured"><img src="images/TexasBlueBonett.jpg" alt="" /></span>
 									</header>
 
@@ -102,7 +102,7 @@
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
-								<h3>Get In Touch</h3>
+								<h3>Questions?</h3>
 								<form>
 									<div class="row 50%">
 										<div class="6u 12u(mobilep)">
