--- a/Speakers.html
+++ b/Speakers.html
@@ -101,7 +101,7 @@
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
-								<h3>Get In Touch</h3>
+								<h3>Questions?</h3>
 								<form>
 									<div class="row 50%">
 										<div class="6u 12u(mobilep)">
