--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 				</section>
 					<section  id="banner" >
 					<header>
-						<h2>Conference Program:&nbsp; <em>Agenda and Technical Program</em></h2>
-						<a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" class="button">Learn More</a>
+						<h2>Conference Program:&nbsp;</h2>
+						<a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" class="button">Agenda and Technical Program</a>
 					</header>
 				</section>
 
@@ -218,7 +218,7 @@
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
-								<h3>Get In Touch</h3>
+								<h3>Questions?</h3>
 								<form>
 									<div class="row 50%">
 										<div class="6u 12u(mobilep)">
