--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -28,10 +28,10 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
+                <li><a href="CallForPaper.html">Call for Papers</a></li>
 								<li class="current">
-									<a href="CallForPaper.html">Conference Program</a>
+									<a href="Schedule.html">Conference Program</a>
 									<ul>
-										<li><a href="CallForPaper.html">Call for Papers</a></li>
 										<li><a href="Schedule.html">Schedule</a></li>
 										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
