Added sponsors, added linkedin group, fixed home page

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -67,14 +67,14 @@
 									<a href="http://www.ieee.org/conferences_events/conferences/publishing/templates.html" target="_blank"> <img alt="Latex Document" src="images/latex.png" width="70" height="60"> </a>
 								</div>
 							</section>
-							<section class="4u 12u(narrower)">
+							<!-- <section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major round-copy-img"></i>
 									<h3>IEEE Copyright Form</h3>
 									<a href="files/IEEE_Copyright_Form(Paper_XX).doc"><img alt="Word Document" src="images/Word.jpg" width="70" height="80"></a>
 										</p>
 								</div>
-							</section>
+							</section> -->
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
 									<i class="icon major round-submit-img"></i>
@@ -136,14 +136,24 @@
 							</section>
 						</div>
 					</div>
+					<!-- Sponsors -->
 
-					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+							<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="130px" height="45px"/></a></li>
+							<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="70px" height="40px"/></a></li>
+				      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="250px" height="40px" /></a></li>
+							<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png" width="250px" height="40px"/></a></li>
+							<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="200px" height="50px"/></a></li>
+							<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="50px"/></a></li>
+							<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="250px" height="50px"/></a></li>
 						</ul>
+				<br/>
+					<!-- Icons -->
+					<ul class="icons">
+						<li><a href="#" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.linkedin.com/groups/12022353" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon fa-google-plus"><span class="label" target="_blank">Google+</span></a></li>
+					</ul>
 
 					<!-- Copyright -->
 						<div class="copyright">
