--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<section  id="banner" >
 					<header>
 						<h2>Conference Program:&nbsp;</h2>
-						<a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" class="button">Agenda and Technical Program</a>
+						<a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank" class="button">Agenda and Technical Program</a>
 					</header>
 				</section>
 
@@ -167,7 +167,7 @@
 								<h3>More Information</h3>
 								<ul class="links">
 									<li><a href="http://www.baylor.edu/" target="_blank">Baylor University</a></li>
-									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas</a></li>
+									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas (including weather)</a></li>
 									<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
 								</ul>
 							</section>
@@ -198,13 +198,24 @@
 							</section>
 						</div>
 					</div>
+	<!-- Sponsors -->
+
+		<ul class="icons">
+			<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="130px" height="45px"/></a></li>
+			<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="70px" height="40px"/></a></li>
+      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="250px" height="40px" /></a></li>
+			<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png" width="250px" height="40px"/></a></li>
+			<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="200px" height="50px"/></a></li>
+			<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="50px"/></a></li>
+			<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="250px" height="50px"/></a></li>
+		</ul>
+<br/>
 
 					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						  <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+							<li><a href="#" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+						  <li><a href="https://www.linkedin.com/groups/12022353" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon fa-google-plus"><span class="label" target="_blank">Google+</span></a></li>
 						</ul>
 
 					<!-- Copyright -->
