--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -64,43 +64,23 @@
 							<!-- Content -->
 
 								<article>
-									<header>
-										<h2>Steering Committee</h2>
-
-									</header>
-
-<p>
-									<h3>General Chair</h3>
-
-                  Oren Eliezer, PHAZR
-                  <h3>Technical Program Chair</h3>
-                  Taylor Barton, University of Colorado
-                  <h3>Technical Program Co-Chairs</h3>
-                  Bryant Baker, Qorvo
-                  Yang Li, Baylor University
-                  <h3>Local Arrangements and Exhibitors Chair</h3>
-                  Charles Baylis, Baylor University
-                  <h3>Registration Chair</h3>
-                  Liang Dong, Baylor University
-                  <h3>Publicity Chairs</h3>
-                  Donald Lie, Texas Tech University
-                  Rashaunda Henderson, University of Texas at Dallas
-                  <h3>Sponsors and Exhibitors Chairs</h3>
-                  Benjamin Eynon, Samsung
-                  Charles Baylis, Baylor University
-                  <h3>Student Posters and Presentations Chair</h3>
-                  David Jackson, University of Houston
-                  <h3>Publications Chair</h3>
-                  Terrance Blake, Texas Instruments (retired)
-                  <h3>Organization Chair</h3>
-                  Robert J. Marks II, Baylor University
-                  <h3>Conference Advisor</h3>
-                  Randall Jean, Baylor University
-                  <h3>Webmaster</h3>
-                  Ruchi Rawal, Copart
-            </p>
-            <br/>
-                      <span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="500px"/></span>
+  									<header>
+  										<h2>Steering Committee</h2>
+  									</header>
+  									<p><b>General Chair</b><br/>Oren Eliezer, PHAZR</p>
+                    <p><b>Technical Program Chair</b><br/>Taylor Barton, University of Colorado</p>
+                    <p><b>Technical Program Co-Chairs</b><br/> Bryant Baker, Qorvo<br/> Yang Li, Baylor University</p>
+                    <p><b>Local Arrangements and Exhibitors Chair</b><br/> Charles Baylis, Baylor University</p>
+                    <p><b>Registration Chair</b><br/> Liang Dong, Baylor University</p>
+                    <p><b>Publicity Chairs</b><br/>Donald Lie, Texas Tech University<br/> Rashaunda Henderson, University of Texas at Dallas</p>
+                    <p><b>Sponsors and Exhibitors Chairs</b><br/>Benjamin Eynon, Samsung<br/>Charles Baylis, Baylor University</p>
+                    <p><b>Student Posters and Presentations Chair</b><br/>David Jackson, University of Houston</p>
+                    <p><b>Publications Chair</b><br/>Terrance Blake, Texas Instruments (retired)</p>
+                    <p><b>Organization Chair</b><br/>Robert J. Marks II, Baylor University</p>
+                    <p><b>Conference Advisor</b><br/>Randall Jean, Baylor University</p>
+                    <p><b>Webmaster</b><br/>Ruchi Rawal, Copart</p>
+                    <br/>
+                    <span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="500px"/></span>
 								</article>
 
 						</div>
