--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
     <link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
@@ -60,20 +55,19 @@
 				<section class="wrapper style1">
 					<div class="container">
 						<div id="content">
-
 							<!-- Content -->
-
 								<article>
   									<header>
   										<h2>Steering Committee</h2>
   									</header>
   									<p><b>General Chair</b><br/>Oren Eliezer, PHAZR</p>
+										<p><b>General Co-chair</b><br/>Alan Davis, University of Texas at Arlington</p>
                     <p><b>Technical Program Chair</b><br/>Taylor Barton, University of Colorado</p>
                     <p><b>Technical Program Co-Chairs</b><br/> Bryant Baker, Qorvo<br/> Yang Li, Baylor University</p>
                     <p><b>Local Arrangements and Exhibitors Chair</b><br/> Charles Baylis, Baylor University</p>
                     <p><b>Registration Chair</b><br/> Liang Dong, Baylor University</p>
                     <p><b>Publicity Chairs</b><br/>Donald Lie, Texas Tech University<br/> Rashaunda Henderson, University of Texas at Dallas</p>
-                    <p><b>Sponsors and Exhibitors Chairs</b><br/>Benjamin Eynon, Samsung<br/>Charles Baylis, Baylor University</p>
+                    <!-- <p><b>Sponsors and Exhibitors Chairs</b><br/>Benjamin Eynon, Samsung<br/>Charles Baylis, Baylor University</p> -->
                     <p><b>Student Posters and Presentations Chair</b><br/>David Jackson, University of Houston</p>
                     <p><b>Publications Chair</b><br/>Terrance Blake, Texas Instruments (retired)</p>
                     <p><b>Organization Chair</b><br/>Robert J. Marks II, Baylor University</p>
@@ -138,15 +132,15 @@
 					</div>
           <!-- Sponsors -->
 
-        		<ul class="icons">
-        			<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="130px" height="45px"/></a></li>
-        			<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="70px" height="40px"/></a></li>
-              <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="250px" height="40px" /></a></li>
-        			<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png" width="250px" height="40px"/></a></li>
-        			<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="200px" height="50px"/></a></li>
-        			<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="50px"/></a></li>
-        			<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="250px" height="50px"/></a></li>
-        		</ul>
+					<ul class="icons sponsor_img">
+						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
+						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
+			      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
+						<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png"/></a></li>
+						<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/keysight-logo-trans.png" width="120px !important" height="36px" /></a></li>
+						<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
+						<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
+					</ul>
         <br/>
 					<!-- Icons -->
           <ul class="icons">
