--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
@@ -60,10 +55,10 @@
 
 			<!-- Banner -->
 				<section id=conf-section >
-					<div class="conf-content">
-						<p></p>
-						<p>The Texas Symposium on Wireless and Microwave Circuits and Systems conference committee invites paper submissions for the 2017 conference, to be held on the beautiful campus of Baylor University in Waco, Texas, on March 30-31, 2017. <br/>
-						Authors from the industry and academia are invited to submit four-page papers of their original and previously unpublished work.  Paper submissions in all areas of wireless and microwave circuits and systems are welcome.  Topics of interest include:</p>
+					<div class="conf-content"><br/>
+						<p>The Texas Symposium on Wireless and Microwave Circuits and Systems conference committee invites paper submissions for the 2017 conference, to be held on the beautiful campus of Baylor University in Waco, Texas, on March 30-31, 2017.
+						<br/>
+						Authors from the industry and academia worldwide are invited to submit four-page papers of their original and previously unpublished work.  Paper submissions in all areas of wireless and microwave circuits and systems are welcome.  Topics of interest include:</p>
 							<ul>
 								<li>• &nbsp;	RF and microwave circuits and systems  </li>
 								<li>• &nbsp;	Devices, modeling, testing and measurement techniques </li>
@@ -133,7 +128,7 @@
 							<h2>Call for Papers</h2>
 								<h3>2017 Texas Symposium on Wireless &amp; Microwave Circuits &amp; Systems <br/>
 								 March 30 - 31<br/>
-								 Baylor University, Waco, Texas</h3>
+								 Baylor University, <br/>Waco, Texas</h3>
 								<br/>
 							<p><a href="Registration.html" target="_blank">2017 Conference Registration </a></p>
 						</header>
@@ -200,16 +195,16 @@
 					</div>
 	<!-- Sponsors -->
 
-		<ul class="icons">
-			<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="130px" height="45px"/></a></li>
-			<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="70px" height="40px"/></a></li>
-      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="250px" height="40px" /></a></li>
-			<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png" width="250px" height="40px"/></a></li>
-			<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="200px" height="50px"/></a></li>
-			<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="50px"/></a></li>
-			<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="250px" height="50px"/></a></li>
-		</ul>
-<br/>
+	<ul class="icons sponsor_img">
+		<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
+		<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
+		<li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
+		<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png"/></a></li>
+		<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/keysight-logo-trans.png" width="120px !important" height="36px" /></a></li>
+		<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
+		<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
+	</ul>
+<br/><br/>
 
 					<!-- Icons -->
 						<ul class="icons">
