--- a/Travel-Stay.html
+++ b/Travel-Stay.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
@@ -153,15 +148,15 @@
 					</div>
 					<!-- Sponsors -->
 
-						<ul class="icons">
-							<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="130px" height="45px"/></a></li>
-							<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="70px" height="40px"/></a></li>
-				      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="250px" height="40px" /></a></li>
-							<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png" width="250px" height="40px"/></a></li>
-							<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="200px" height="50px"/></a></li>
-							<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="50px"/></a></li>
-							<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="250px" height="50px"/></a></li>
-						</ul>
+					<ul class="icons sponsor_img">
+						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
+						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
+			      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
+						<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png"/></a></li>
+						<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/keysight-logo-trans.png" width="120px !important" height="36px" /></a></li>
+						<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
+						<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
+					</ul>
 				<br/>
 					<!-- Icons -->
 					<ul class="icons">
