Fixed sponser footer

--- a/CallForPaper.html
+++ b/CallForPaper.html
@@ -61,7 +61,7 @@
 								<article>
 									<header>
 										<h2>Call for Papers</h2>
-                    <span class="image featured"><img src="images/TexasBlueBonett.jpg" alt="" /></span>
+
 									</header>
 
 									<p>2016 Texas Symposium on Wireless and Microwave Circuits and Systems <br/>
@@ -74,7 +74,7 @@
 						</div>
 					</div>
 				</section>
-
+	<div><img src="images/TexasBlueBonett.jpg" height="650px" width="100%" alt="" /></div>
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
@@ -134,7 +134,7 @@
 						<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
 						<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
 					</ul>
-        <br/>
+        <br/><br/>
 					<!-- Icons -->
           <ul class="icons">
             <li><a href="#" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
