implemented new changes

--- a/CallForPaper.html
+++ b/CallForPaper.html
@@ -61,20 +61,43 @@
 								<article>
 									<header>
 										<h2>Call for Papers</h2>
-
 									</header>
+									<div>
+											<p>The Texas Symposium on Wireless and Microwave Circuits and Systems conference committee invites paper submissions for the 2017 conference, to be held on the beautiful campus of Baylor University in Waco, Texas, on March 30-31, 2017.
+											<br/>
+											Authors from the industry and academia worldwide are invited to submit four-page papers of their original and previously unpublished work.  Paper submissions in all areas of wireless and microwave circuits and systems are welcome.  Topics of interest include:</p>
+												<ul>
+													<li>• &nbsp;	RF and microwave circuits and systems  </li>
+													<li>• &nbsp;	Devices, modeling, testing and measurement techniques </li>
+													<li>• &nbsp;	5G and millimeter-wave wireless technologies</li>
+													<li>• &nbsp;	Spectrum management and coexistence </li>
+													<li>• &nbsp;	Radar and sensing</li>
+													<li>• &nbsp;	Antennas, propagation, and electromagnetics</li>
+													<li>• &nbsp;	Microwave applied metrology</li>
+													<li>• &nbsp;	Wireless power transfer</li>
+													<li>• &nbsp;	Electromagnetic materials and modeling</li>
+													<li>• &nbsp;	Wireless or optical communications </li>
+													<li>• &nbsp;	Photonics</li>
+													<li>• &nbsp;	Wireless technologies for biomedical applications</li>
+													<li>• &nbsp;	Internet of Things</li>
+													<li>• &nbsp;	Emerging wireless technologies</li>
+												</ul>
 
-									<p>2016 Texas Symposium on Wireless and Microwave Circuits and Systems <br/>
-                  Baylor University<br/>
-                  Waco,Texas<br/>
-                  March 31- March 31, 2017</p>
+												<p>2016 Texas Symposium on Wireless and Microwave Circuits and Systems <br/>
+			                  Baylor University<br/>
+			                  Waco,Texas<br/>
+			                  March 31- March 31, 2017</p>
 
-								</article>
+										<p>Published papers will be archived will the IEEE Xplore®, and a student-best-paper-award will be awarded to offset registration and travel costs.</p>
+								</div>
+							</article>
+							<!-- <div><img src="images/TexasBlueBonett.jpg" height="650px" width="100%" alt="" /></div> -->
 
 						</div>
 					</div>
+					<span class="image featured"><img src="images/TexasBlueBonett.jpg" alt="" height=450px width="60%" /></span>
 				</section>
-	<div><img src="images/TexasBlueBonett.jpg" height="650px" width="100%" alt="" /></div>
+
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
