--- a/PosterBooklet.html
+++ b/PosterBooklet.html
@@ -56,25 +56,22 @@
   <section class="wrapper style1">
     <div class="container">
       <div class="row">
-        <div class="4u 12u(narrower)">
+        <!-- <div class="4u 12u(narrower)">
           <div id="sidebar">
-            <!-- Sidebar -->
             <section>
               <div class="box post">
                 <p><img src="images/posterBooklet.jpg" width="270px" height="180px" alt="" /></p>
               </div>
-
             </section>
-
           </div>
-        </div>
+        </div> -->
         <div class="8u  12u(narrower) important(narrower)">
           <div id="content">
 
             <!-- Content -->
 
               <article>
-                <p><b><a href="files/2016 Texas Symposium Poster Booklet.pdf" target="_blank">2017 Texas Symposium Poster Booklet</b></p>
+                <p><b><a href="files/2016 Texas Symposium Poster Booklet.pdf" target="_blank">2016 Texas Symposium Poster Booklet</b></p>
               </article>
 
           </div>
